# Vromlix-Cognitive-Architecture

./: README.md  auto_indexador.py  config_api_keys_secrets.example.py  core_knowledge_indexer.py  core_raptor_engine.py  core_vromlix_prime.py  main.py  pyproject.toml  vromlix_utils.py
codex_memory/: 00_System_Operating_Logic.xml  01_Dynamic_Profile.mock.xml  02_MoE_Routing.json  05_Orchestrator_Prompts.xml
vromlix_cognitive_architecture.egg-info/: PKG-INFO  requires.txt
vromlix_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
