[project]
name = "vromlix-cognitive-architecture"
version = "0.1.0"
description = "Descripción de tu proyecto"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.11.4",
    "feedparser>=6.0.12",
    "google-genai>=1.68.0",
    "requests>=2.32.5",
]

[tool.ruff]
extend-exclude = ["SANDBOX"]

[tool.mypy]
exclude = ["^SANDBOX/"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
]
