[project]
name = "vromlix-cognitive-architecture"
version = "0.1.0"
description = "Descripción de tu proyecto"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.11.4",
    "feedparser>=6.0.12",
    "google-genai>=1.68.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "lxml>=5.1.0",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "instructor>=1.7.0",
]

[tool.ruff]
extend-exclude = ["SANDBOX"]

[tool.mypy]
exclude = ["^SANDBOX/"]
# Fuerza la revisión de funciones que no tienen firmas declaradas (resuelve los avisos de severidad 2)
check_untyped_defs = true

# Silencia los errores de importación SOLO para el Catálogo SOTA 2026.
# Si una librería no está aquí, Mypy lanzará error para forzar su actualización.
[[tool.mypy.overrides]]
module = [
    "dotenv.*",
    "fastapi.*",
    "fastembed.*",
    "feedparser.*",
    "google.*",
    "granian.*",
    "gspread.*",
    "httpx.*",
    "hyx.*",
    "instructor.*",
    "kreuzberg.*",
    "lancedb.*",
    "langfuse.*",
    "librosa.*",
    "litellm.*",
    "lxml.*",
    "markitdown.*",
    "niquests.*",
    "numpy.*",
    "opik.*",
    "pandas.*",
    "pydantic_ai.*",
    "pyreqwest.*",
    "smolagents.*",
    "sqlite_vec.*",
    "tenacity.*",
    "tqdm.*",
    "umap.*",
    "uvicorn.*",
    "vromlix_utils.*",
    "yaml.*",
    "youtube_transcript_api.*",
    "yt_dlp.*",
    "ytmusicapi.*"
]
ignore_missing_imports = true


[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
